
  * debian/control
    - Fix package description for libavahi-gobject0. (Closes: #528916)
    - Change section of avahi-ui-utils to utils. (Closes: #560830)
    - Bump Standards-Version to 3.8.3. No further changes.
  * debian/patches/20_avahi-daemon_kfreebsd.patch
    - Fix avahi-daemon on GNU/kFreeBSD. (Closes: #564607)
      Thanks to Julien BLACHE for the patch.

 -- Michael Biebl <biebl@debian.org>  Wed, 13 Jan 2010 21:25:47 +0100

avahi (0.6.25-2) unstable; urgency=low

  [ Michael Biebl ]
  * debian/patches/15-manpage-typo-fixes.patch
    - Fix a few typos in the man pages (s/seperated/separated/).
      Thanks to A. Costa for the patch. (Closes: #525268)

  [ Sjoerd Simons ]
  * debian/avahi-daemon-check-dns.sh
    + Also check for a default route before checking the DNS (Closes: #551651)

 -- Sjoerd Simons <sjoerd@debian.org>  Sun, 22 Nov 2009 22:46:03 +0000

avahi (0.6.25-1) unstable; urgency=low

  * New upstream release.
  * Use set -e instead of #!/bin/sh -e for all maintainer and shell scripts.
  * debian/patches/02-avahi-daemon-dbus-policy.patch
    - Removed, merged upstream.
  * debian/patches/03-avahi-daemon-reflector-packet-storm.patch
    - Removed, merged upstream.

 -- Michael Biebl <biebl@debian.org>  Fri, 17 Apr 2009 13:21:58 +0200

avahi (0.6.24-3) unstable; urgency=low

  * Switch patch management system to quilt.
  * debian/control
    - Change Section of avahi-dbg to debug.
    - Bump Standards-Version to 3.8.1. No further changes.
    - Change Build-Depends on libcap2-dev to libcap-dev. Tighten the version
      to (>= 1:2.16) to ensure we don't pick up any old libcap1 version.
      (Closes: #520836)
  * debian/patches/03-avahi-daemon-reflector-packet-storm.patch
    - Fix a bug in avahi-daemon that could cause packet storms when reflecting
      legacy unicast mDNS traffic. (Closes: #517683)
      SECURITY: CVE-2009-0758
      Thanks to Rob Leslie for the patch.
  * debian/python-avahi.examples