@@ -7,6 +7,10 @@ avahi (0.6.25-3) unstable; urgency=low
   * debian/patches/20_avahi-daemon_kfreebsd.patch
     - Fix avahi-daemon on GNU/kFreeBSD. (Closes: #564607)
       Thanks to Julien BLACHE for the patch.
+  * debian/patches/25_check_net_if_dl_h_for_pfroute.patch
+    - Fix build failure on GNU/Hurd by improving the configure check to also
+      test for net/if_dl.h so the correct backend is used. (Closes: #558975)
+      Thanks to Pino Toscano for the patch.
 
  -- Michael Biebl <biebl@debian.org>  Wed, 13 Jan 2010 21:25:47 +0100
 
